# COURSE_PROJECT

./: .gitignore  AuthenticationService.cpp  AuthenticationService.h  CMakeLists.txt  CSVParser.cpp  CSVParser.h  CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  FileException.cpp  FileException.h  FileManager.h  GenreManager.cpp  GenreManager.h  MP3FileFinder.cpp  MP3FileFinder.h  MP3FileManager.h  MP3FileNameParser.cpp  MP3FileNameParser.h  MP3FileOperations.cpp  MP3FileOperations.h  MP3MetadataReader.cpp  MP3MetadataReader.h  MusicCatalog.cpp  MusicCatalog.h  MusicCatalogException.cpp  MusicCatalogException.h  ParseException.cpp  ParseException.h  README.md  ReportGenerator.cpp  ReportGenerator.h  SearchResultsWindow.cpp  SearchResultsWindow.h  TXTParser.cpp  TXTParser.h  TXTReader.cpp  TXTWriter.cpp  TXTWriter.h  (+23 more)
includes/: FileException.h  FileManager.h  GenreManager.h  MP3FileFinder.h  MP3FileNameParser.h  MP3FileOperations.h  MusicCatalog.h  Parser.h  TXTWriter.h  TemplateUtils.h
includes/core/: MusicCatalog.h  Track.h  TrackRepository.h  TrackSearcher.h
includes/exceptions/: FileException.h  ParseException.h  TrackException.h  ValidationException.h
includes/file_operations/: FileManager.h  TXTReader.h  TXTWriter.h
includes/integration/: YandexMusicIntegrator.h
includes/mp3/: MP3FileManager.h  MP3MetadataReader.h
includes/ui/: ReportGenerator.h  SearchResultsWindow.h  TrackTableHighlighter.h  mainwindow.h
src/: GenreManager.cpp  MP3FileManager.cpp  MP3FileNameParser.cpp  MP3MetadataReader.cpp  ParseException.cpp  ReportGenerator.cpp  TXTParser.cpp  TXTReader.cpp  TXTWriter.cpp  TrackException.cpp  TrackRepository.cpp  TrackSearcher.cpp  TrackSorter.cpp  TrackTableHighlighter.cpp  YandexMusicAPI.cpp  YandexMusicIntegrator.cpp  main.cpp  mainwindow.cpp
src/core/: GenreManager.cpp  MusicCatalog.cpp  Track.cpp  TrackRepository.cpp  TrackSearcher.cpp  TrackSorter.cpp
src/exceptions/: FileException.cpp  MusicCatalogException.cpp  ParseException.cpp  TrackException.cpp  ValidationException.cpp
src/file_operations/: TXTParser.cpp  TXTReader.cpp  TXTWriter.cpp
src/integration/: YandexMusicAPI.cpp  YandexMusicIntegrator.cpp
src/mp3/: MP3FileFinder.cpp  MP3FileManager.cpp  MP3FileNameParser.cpp  MP3FileOperations.cpp  MP3MetadataReader.cpp
src/ui/: ReportGenerator.cpp  SearchResultsWindow.cpp  TrackTableHighlighter.cpp  mainwindow.cpp
